[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoffaxis"
version = "0.1.0"
description = "A Python package for off-axis holography complex field retrieval."
authors = [
    { name = "Maxime W. Matthès, Rodrigo Gutierrez Cuevas, Sébastien M. Popoff" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.2",
    "matplotlib>=3.0",
    "scipy>=1.4",
    "scikit-image>=0.16",
    "pyfftw>=0.12",
    "numba>=0.50"
]

[project.optional-dependencies]
gpu = [
    "cupy>=13.0"
]

[project.urls]
Homepage = "https://github.com/wavefrontshaping/pyoffaxis"

[tool.setuptools.packages.find]
include = ["pyoffaxis*"] 